deployments/Kustomize/etcd-api/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etcd-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: etcd-api
